RESOLVED FIXED171286
Our signal handler shouldn't print when sigaction succeeds
https://bugs.webkit.org/show_bug.cgi?id=171286
Summary Our signal handler shouldn't print when sigaction succeeds
Keith Miller
Reported 2017-04-25 13:39:03 PDT
Our signal handler shouldn't print when sigaction succeeds
Attachments
Patch (1.68 KB, patch)
2017-04-25 13:39 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2017-04-25 13:39:39 PDT
Michael Saboff
Comment 2 2017-04-25 13:42:21 PDT
Comment on attachment 308135 [details] Patch r=me
WebKit Commit Bot
Comment 3 2017-04-25 14:23:18 PDT
Comment on attachment 308135 [details] Patch Clearing flags on attachment: 308135 Committed r215762: <http://trac.webkit.org/changeset/215762>
WebKit Commit Bot
Comment 4 2017-04-25 14:23:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.