Our signal handler shouldn't print when sigaction succeeds https://bugs.webkit.org/show_bug.cgi?id=171286

Reviewed by Michael Saboff.

It turns out !result is not the same as !!result.

* wtf/threads/Signals.cpp:
(WTF::jscSignalHandler):


Canonical link: https://commits.webkit.org/188165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215762 268f45cc-cd09-0410-ab3c-d52691b4dbfc